Add a max-length to the input, as we run through the 6 with my woes

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <section class="bg-cloud">
       <small>N<sup>o</sup> of Paragraphs</small>
       <div class="paragraph-controls">
-      <input class="paragraph" type="tel" name="paragraph_count" value="6">
+      <input class="paragraph" type="tel" name="paragraph_count" value="6" maxlength="2">
       <input class="paragraph-generate" type="submit" name="Generate" value="">
       </div>
     </section>
