--- a/index.html
+++ b/index.html
@@ -25,12 +25,14 @@
       </div>
     </section>
 
-    <?php require('LoremIpsum.class.php');
-$generator = new LoremIpsumGenerator;
-//100 words in html format
-$generator->getContent(100);
+    <?php
 
-?>
+    require('LoremIpsum.class.php');
+    $generator = new LoremIpsumGenerator;
+    //100 words in html format
+    $generator->getContent(100);
+
+    ?>
     <div class="bg-gold button">Copy Text</div>
     <p>My woes this is that nasty flow way up, I feel blessed.Got a lot of enemies oh my God I'mma write my wrongs.Uh, thinkin' out loud Smart kids that smoke weed, Honor Roll. You only want what's real you just never found it I remember when my schedule was as flexible as she is.Don't talk to me like I'm famous, and don't assume cause I don't respect assumptions babe. For all the stuntin' I'll forever be immortalized I apologize it happened over time.</p>
     <footer>
