Running' Thru The 6 Wit My Woes
Update some styles, width of paragraphs, buttons styles, and update
tweet

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <p>My woes this is that nasty flow way up, I feel blessed.Got a lot of enemies oh my God I'mma write my wrongs.Uh, thinkin' out loud Smart kids that smoke weed, Honor Roll. You only want what's real you just never found it I remember when my schedule was as flexible as she is.Don't talk to me like I'm famous, and don't assume cause I don't respect assumptions babe. For all the stuntin' I'll forever be immortalized I apologize it happened over time.</p>
     </div>
     <footer>
-      <div class="bg-white button">Share with your friends</div>
+      <a href="https://twitter.com/intent/tweet?text=Drake Ipsum: If you’re reading this set your type with Drake&amp;url=http://drakeipsum.co" rel="nofollow" target="_blank" title="Share on Twitter"><div class="bg-white button">Share with your friends</div></a>
       <small>No new friends tho.</small>
       <hr>
       <small>This was created real quick by <a href="">@russted</a> & <a href="">@darrendub</a><small>
