got rid of the lines with obvious swears. Sorry Drake.

--- a/drake-db.html
+++ b/drake-db.html
@@ -1,4 +1,3 @@
-'When I pull up on a nigga',
 'Tell that back back',
 'I’m too good with these words',
 'Watch a backtrack',
@@ -18,12 +17,9 @@
 'Make it andale',
 'Way up north packed in Honda cars',
 'They ’ont know who we are',
-'All they only pussy shooting at the star',
 'Right or wrong I’ma write my wrongs',
 'They can’t live this long',
 'You don’t know where you’re gonna go',
-'I got this shit mapped out strong',
-'When I pull up on a nigga',
 'Tell that back back',
 'I’m too good with these words',
 'Watch a backtrack',
@@ -44,11 +40,8 @@
 'You know they all actin‘ different now',
 'And I I just can’t pretend',
 'Seen too much it’s so hard for me to let new people in',
-'I can’t change this shit set in stone',
 'They can’t live this long',
 'You don’t know where you’re gonna go',
-'I got this shit mapped out strong',
-'When I pull up on a nigga',
 'Tell that back back',
 'I’m too good with these words',
 'Watch a backtrack',
@@ -68,40 +61,27 @@
 'Look',
 'I got enemies got a lotta enemies',
 'Got a lotta people tryna drain me of this energy',
-'They tryna take the wave from a nigga',
-'Fuckin’ with the kid and pray for your nigga',
 'I got girls in real life tryna up my day',
 'goin’ online that ain’t part of my day',
-'I got real shit poppin’ with my family too',
 'I got that can never leave Canada too',
 'I got two mortgages thirty million in total',
-'I got that’ll still try fuckin’ me over',
 'I got rap that I gotta act like I like',
 'But my actin’ days are over them for life yea',
 'I got enemies got a lotta enemies',
 'Got a lotta people tryna drain me of this energy',
-'They tryna take the wave from a nigga',
-'Fuckin’ with the kid and pray for your nigga',
-'I got people talkin’ down man like I give a fuck',
 'I bought this one a purse I bought this one a truck',
 'I bought this one a house I bought this one a mall',
-'I keep buyin’ shit just make sure you keep track of it all',
-'I got bitches askin’ me about the code for the Wi-Fi',
 'So they can talk about they timeline',
 'And show me pictures of they friends',
 'Just to tell me they ain’t really friends',
 'Ex-girl she the female version of me',
-'I got strippers in my life but they virgins to me',
 'I heard everybody talking bout what they gonna be',
 'I got high hopes for you we gon’ see',
 'I got money in the courts so all my are free',
-'Bout to call your ass a Uber I got somewhere to be',
 'I hear fairy tales ‘ bout how they gon’ run up on me',
 'Well run up when you see me then and we gon’ see',
 'I got enemies got a lotta enemies',
 'Got a lotta people tryna drain me of this energy',
-'They tryna take the wave from a nigga',
-'Fuckin’ with the kid and pray for your nigga',
 'Naw all of you I ain’t finished',
 'Y’all don’t wanna hear me say it’s a go',
 'Y’all don’t wanna see Win Win fifty a woe',
@@ -109,14 +89,11 @@
 'I got real ones with me everywhere that I go',
 'I’m tryna tell ya I got enemies got a lotta enemies',
 'Every time I see ‘ em somethin’ wrong with they memory',
-'Tryna take the wave from a nigga',
 'So tired of savin’ all these mayne!',
 'Yeah',
 'Run up',
 'I got enemies got a lotta enemies',
 'Got a lotta people tryna drain me of this energy',
-'They tryna take the wave from a nigga',
-'Fuckin’ with the kid and pray for your nigga',
 '10 Bands 50 bands 100 bands it man',
 'Let’s just not even discuss it man O-M-G',
 'sleep I ain’t trippin‘ I’ma let em sleep',
@@ -131,7 +108,6 @@
 'My ex ask me Where you moving? I said On to better things',
 'I been in the crib with the phones off',
 'I been at the house taking no calls',
-'I done hit the stride got my shit going',
 'In the six cooking with the wrist motion',
 'Drapes closed I don’t know what time it is',
 'I’m still awake I gotta shine this year',
@@ -154,12 +130,10 @@
 'I need a FuelBand just to see how long the run has been',
 'I been in the crib with the phones off',
 'I been at the house taking no calls',
-'I done hit the stride got my shit going',
 'In the six cooking with the wri-wri-wri-wri',
 'Hol it Hol it Hol it Hol it Hol it',
 'No sleepin‘ in the streets',
 'Shaky warrior',
-'Yeah this that Oliver 40 Niko shit man 15 Fort York shit ya know',
 'Boi-1da what’s poppin’?',
 'Yeah yeah',
 'Runnin‘ through the 6 with my woes',
@@ -194,11 +168,8 @@
 'You know how that should go',
 'Don’t with them they too irrational woah',
 'This is that nasty flow',
-'Top boy in this shit I’m so international',
 'Reps up is in here got P Reign and Chubby and TJ and Winnie and woah',
-'Yeah and you know how that shit go',
 'I might declare it a holiday as soon as Baka get back on the road',
-'Yeah but you know how that shit go',
 'They so irrational they don’t wanna patch it up',
 'They wanna mash it up woah',
 'My Jibba he whip it I ride in the passenger',
@@ -206,13 +177,11 @@
 'I had to get back to you woah',
 'I’m turnin‘ into a that thinks about money and women',
 'Like 24/7 that’s where my life took me',
-'That’s just how shit happened to go',
 'shell out all if yuh eye nuh big',
 'Always haffi look out yuh no know if yuh head book out',
 'Dun know a de unruly boss dis man',
 'No bomboclat otha',
 'And if a boy nuh like',
-'OVO or Chromatic Yuh can jus suck yuh mada!!',
 'With no apology If you nuh like we we nuh like you neither youth',
 'Your girl a say we cute if you diss you will get execute',
 'That’s the truth OVO unruly',
@@ -220,7 +189,6 @@
 'Envelopes coming in the mail let her open em’',
 'Hopin‘ for a check again ain’t no tellin’',
 'Yeah she invite me to the telly',
-'Keep the blade with me when I go to check a bitch ain’t no‘ tellin',
 'Yeah police comin‘ round‘ lookin‘ for some help on a case they gotta solve we never help ’em',
 'Yeah I stay up late at night thinkin‘ bout‘ my life',
 'Want a lot will I get it all? Ain’t no tellin’',
@@ -236,27 +204,21 @@
 'Man I’m really him you just fillin‘ in man',
 'I gotta blunt can I get a light?',
 'Yeah I took the summer off to get it right',
-'Yeah I gave these boys a shot and they fuckin‘ failed',
 'like you took the summer off? we couldn’t tell',
 'Dog just bought a island gotta sail to it',
 'You pick the casket I’ll put the nail through it',
 'I ain’t gotta do it but it someone gotta do it',
 'Hate if someone else did it I may as well do it',
-'I had to switch the flow up on you niggas',
-'The shit was gettin‘ too predictable',
-'The new shit on steroids I would never pass a physical',
 'I got it rollin‘ in all kinda ways lump sum and residual yeah',
 'I mean we hear about the money you be gettin‘ but we just never see a visual',
 'It’s our year (aw yeah) Aw yeah',
 'I mean besides Ricky Ross Aubrey the biggest boss here (grunt)',
 'What’s the word these days?',
 'Buncha‘ chasing after all these woman they don’t even know',
-'Buncha‘ out of season woman fuckin‘ off-season to get last season wardrobe',
 'All the rappers that you vouch for need to get out of the house more they washed up',
 'And even if the team was religious with it I can’t really see another squad tryna‘ cross us nah',
 'OVO unruly',
 'One shot to make it in a life',
-'From the six to the fucking 876',
 'I gotta‘ keep watchin‘ for Opper’s cause‘ anything’s possible yeah',
 'There’s no code in ethics out here anyone will take shots at you yeah',
 'think they can come take what I got let’s be logical yeah',
@@ -273,12 +235,9 @@
 'Put heads on my fire place oh my take time',
 'Ain’t no tellin’',
 'Oh my take time ain’t no tellin’',
-'Breathe through ride through damn girl',
 'Oh man I don’t know',
-'Pilled up filled up damn girl',
 'I’ll be getting back to you for sure man man',
 'Laced up dripped up sauced up',
-'Damn girl I wanna ride with you',
 'Waved up blowing up blowing up growing up',
 'Had to get it popping with you',
 'What if I pick you up from your house',
@@ -297,18 +256,14 @@
 'Already on ten',
 'Big as Madonna I’ll say it again',
 'Soon as you get in nah nah nah',
-'Breathe through ride through damn girl',
 'Oh man I don’t know',
-'Pilled up filled up damn girl',
 'I’ll be getting back to you for sure man man',
 'Laced up dripped up sauced up',
-'Damn girl I wanna ride with you',
 'Waved up blowing up blowing up growing up',
 'Had to get it popping with you',
 'I’ll admit it I’ll admit it',
 'Watch your tone boy',
 'Get hurt boy',
-'Aww here go another mo’fucker that don’t understand the concept of puttin‘ money first boy (first)',
 'I’m ’bout to hit you with the work boy (work)',
 'I’m ’bout to hit you with the work boy (work)',
 'I hate comin‘ through stuntin‘ on that I know ahh that’s the worst boy (worst)',
@@ -321,16 +276,9 @@
 'Got me feelin‘ like a ball hog',
 'I don’t pass ’em when I get it',
 'I’ll admit it I’ll admit it',
-'You too worried ’bout the bitches',
-'I got one girl and she my girl and nobody else can hit it',
 'She’ll admit it she’ll admit it',
-'She ain’t fuckin‘ with you niggas',
 'And just like every single other thing in my life',
 'You can have her when I’m finished',
-'I hear the talk on road is I’m the shit boy',
-'Phone call back home shit is hot up in the 6 boy',
-'Shit hot up in the 6 right now shit hot up in the 6 boy',
-'Shit is hot up in the 6 right now',
 'Come see us and get it fixed boy',
 'Black Benz on the road boy',
 'Already had a Rolls Royce',
@@ -342,11 +290,9 @@
 'I’m about to say a true thing',
 'I’m about to say a true thing',
 'You was poppin‘ back when Usher wore a U-chain',
-'God damn you changed',
 'I put it on ’erything it’s a err ting',
 'It’s a OVO come through murk things',
 'I know you heard things',
-'Bitch I know you heard things',
 'Yeah I know you heard things',
 'I’m not new to this',
 'Coming from the 6 side',
@@ -366,7 +312,6 @@
 'I ain’t reply let ’em know I read it though',
 'Voice mail say she ready though',
 'know I’m credible',
-'Ain’t no pussy on a pedestal',
 'Got my foot on the ’cedes Benz pedal doin‘ 90 on the bridge like',
 'you already know',
 'And if you don’t know then now you know now you know',
@@ -375,17 +320,13 @@
 'Four or five chains made of gold getting tangled',
 'My Biz said the first mil gonna change you',
 'Change for the better hit it then dead her',
-'Thats my vendetta keep this shit together',
-'God damn we ain’t even got a scam',
 'Cocaine Coupe we ain’t even gotta scale',
 'Used to flip apps now that old plug murked',
-'Ain’t a damn thing changed you can still get the work',
 'Yeah I remember how I went to Louis V with Haf’',
 'Watched them spread ten thousand dollars on the glass',
 'I never ever thought I’d see that in my life',
 'Now I’m in the east cause my boys are gettin‘ right',
 'Man I was on TV makin‘ fifty racks a year',
-'After helpin‘ mama out the shit would disappear',
 'I am not a man I can’t do this on my own',
 'So I started askin‘ them if they would put me on',
 'And they did put me on',
@@ -394,7 +335,6 @@
 'Now we in the basement and we workin‘ on the phone line',
 'Line blowin‘ up workin on the phones',
 'Now we in the basement and we workin‘ on the phones',
-'But I just couldn’t do it had to leave that shit alone man',
 'Blowin‘ up line blowin‘ up',
 'They need the whole thing',
 'Blowin‘ up my really need the whole thing',
@@ -434,13 +374,9 @@
 '6 man like Lou Will 2 girls and they get along like I’m',
 'Like I’m Lou Will I just got the new deal',
 'I am in the Matrix and I just took the blue pill',
-'No ho shit no fuckin‘ ho shit just save that for your shit',
-'I don’t need no fuckin‘ body I run my own shit',
 'Like Soulja I thought I told yah you didn’t listen',
 'Fieri I’m in the kitchen I’m a magician',
 'I’m on it I’m like Macgyver I’m Michael Meyers',
-'I kill careers and cut the lights off this shit is frightenin’',
-'I knew it would end up like this I’m fuckin‘ psychic',
 'Young but I’m makin‘ millions to work the night shift',
 'Work the night shift',
 'Young but I’m makin‘ millions to work the night shift',
@@ -455,8 +391,6 @@
 'Not your guy I’m not your buddy show no lovin’',
 'I might go DeMarcus Cousins out in public',
 'I mean I’m back on this again I’m here again',
-'I didn’t do this fuckin‘ tape for CNN',
-'I am not tryna win awards that shit looked forced',
 'It’s nothin‘ like this',
 'Young but I’m makin‘ millions to work the night shift',
 'Work the night shift',
@@ -496,8 +430,6 @@
 'I just gotta know the road',
 'Something is said dont say that again',
 'I just been out and bad from way back when',
-'I can’t be out here on no laid back shit',
-'I can’t be out here on no laid back shit',
 'You got something to say then say that thing',
 'I just been out and bad from way back when',
 'I gotta get on the road I gotta get on the road',
@@ -516,10 +448,8 @@
 'Let me go let me bring it home to you',
 'Let me go let bring bring it home to you',
 'Now and forever I’ll bring it home',
-'I got some shit for you to come and get',
 'I’m at the St Regis up on Briar Oaks hit me when you done your shift',
 'I see you doin‘ well baby',
-'Oh you pullin‘ shit together I can tell baby',
 'Is you single or what?',
 'I need a girl from the country',
 'I need a girl from Kentucky',
@@ -537,10 +467,6 @@
 'Gotta come through quick quick',
 'Oh you at the club? Cashin‘ out with everything',
 'Hit me when you done your shift',
-'I know a girl I should propose to but we just on some different shit',
-'She on some up at 9AM already cookin‘ in the kitchen shit',
-'And lately we’ve been fightin‘ on some why-you-love-the-strippin-shit',
-'Yeah she workin‘ with the spatula I know she love flippin‘ shit',
 'All on me',
 'I don’t deserve it',
 'She’s just a little too perfect',
@@ -556,7 +482,6 @@
 'Some company',
 'Having conversations with mama man my life is a mess',
 'Ain’t been returning the texts so she been reading the press',
-'She got google alerts them shits go straight to her phone',
 'She worry bout me from home you know she raised me alone',
 'She said I heard you back with you know who',
 'I told her Girl I’m always back with you know who',
@@ -595,7 +520,6 @@
 'Yeah this is a crazy life',
 'But you and the six raised me right',
 'Don’t ever take advice that was great advice',
-'You and the six raised me right that shit saved my life',
 'Having conversations with momma we start talkin‘ bout dad',
 'You know he dropping a single he saying this is his window',
 'That still wearing linen that still in the club',
@@ -607,13 +531,10 @@
 'At least I been to a prison at least I know what it’s like',
 'I used to rap on the phone one of his friends doing life',
 'And now I got me a Grammy that could be part of the reason',
-'Let’s just call this shit even we got some things to believe in',
 'Do you remember back to Weston Road Scarlett Road?',
-'Hangin‘ with Aaron Bell and Reny shit could’ve gone south for me he looked out for me ma',
 'He never let me do drugs',
 'He let me shoot a gun one summer but out there everyone does',
 'He made me listen to his music old music soul music',
-'Shit that can only be created if you go through it',
 'I used to get teased for being black and now I’m here and I’m not black enough',
 'Cause I’m not acting tough or making stories up bout where I’m actually from',
 'But I just roll with it momma rolling stone with it momma',
@@ -623,7 +544,6 @@
 'Know I don’t call enough momma',
 'I just been working with so little time for personal momma',
 'Hard labor let me pay the price',
-'You and the six raised me right that shit saved my life',
 'These days I’m letting God handle all things above me',
 'The things I can’t change are the reasons you love me',
 'Listen you can hear them calling my name',
@@ -642,10 +562,8 @@
 'I done did everything to her',
 'She forgave me for everything this a forever thing',
 'Hate that I treated like it’s a whatever thing',
-'Trust me girl this shit is everything to me',
 'She from the Jungle she from the Jungle',
 'I take somebody elses car drive it undercover',
-'This shit is everything to me this shit is everything',
 'Don’t know where we stand I used to hit you bout everything',
 'Are we still good? Are we still good?',
 'Are we still good? Are we still good?',
@@ -679,7 +597,6 @@
 'Last night I went to sleep wanted more',
 'Tried to decide what direction I should go towards',
 'Some nights I wish I could go back in life',
-'Not to change shit just to feel a couple things twice',
 '28 at midnight wonder what’s next for me',
 'Longevity wonder how long they’ll check for me',
 'Prolly forever if I stay in my zone',
@@ -702,10 +619,8 @@
 'But here we are yeah',
 'Lately I feel the haters eatin‘ away at my confidence',
 'They scream out my failures and whisper my accomplishments',
-'Bitches alter my message like we have words',
 'And stories bout my life hit the net like a bad serve',
 'Bitter women I’m overtextin‘ are PMSing crazy this year',
-'Fuckin‘ with my image',
 'I’ve been tryna reach to you so I can save ’em this year',
 'it I guess I gotta wait til next year',
 'And I heard someone say something that stuck with me a lot',
@@ -716,7 +631,6 @@
 'So everybody can tweet about it',
 'And then they start to RIP about it',
 'And four weeks later nobody even speaks about it',
-'Damn I just had to say my piece about it',
 'Oh you gotta love it',
 'But they scared of the truth so back to me showin‘ out in public',
 'That’s a hotter subject',
@@ -726,12 +640,10 @@
 'Part of my heritage pardon my arrogance part in my hair again',
 'That’s that comeback flow comeback flow',
 'Once I start it’s apparent',
-'I wanted a girl whose ass is so big that’s partly embarrassin’',
 'But all the blushin‘ and your discussions',
 'And all the judgement',
 'Your content so aggressive lately what’s irkin‘ you?',
-'Shit is gettin‘ so personal in your verses too',
-'I wanna prove that I’m number one over all these niggas',
+'I wanna prove that I’m number one',
 'Bein‘ number two is just being the first to lose',
 'My city dictated music nobody seein‘ us',
 'Winter here already but somehow I’m heatin‘ up',
@@ -745,10 +657,8 @@
 'Why you rappin‘ like you come from the streets?',
 'I got a backyard where money seems to come from the trees',
 'And I’m never ever scared to get some blood on my leaves',
-'Phantom slidin‘ like the shit just hit a puddle of grease',
 'I cook the beef well done on the double with cheese',
 'Special order for anybody that’s comin‘ for me',
-'Shit you probably flinch if somebody sneeze',
 'You see they got me back like it’s just 40 Oli and me',
 'Cuttin‘ all loose ends I be the barber for free',
 'I’m almost at four minutes going off on the beat',
